crates/store/re_mcap/src/layers/snapshots/re_mcap__layers__protobuf__integration_tests__missing_optional_fields.snap
---
source: crates/store/re_mcap/src/layers/protobuf.rs
expression: "format!(\"{:-240}\", &chunks[0])"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                      │
│ * entity_path: /test_topic                                                                                                                                                     │
│ * heap_size_bytes: [**REDACTED**]                                                                                                                                              │
│ * id: [**REDACTED**]                                                                                                                                                           │
│ * version: [**REDACTED**]                                                                                                                                                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────────┬──────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_log_time             ┆ message_publish_time             ┆ com.example.Person:message                               │ │
│ │ ---                                           ┆ ---                          ┆ ---                              ┆ ---                                                      │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable Duration(ns)  ┆ type: nullable Duration(ns)      ┆ type: nullable List[nullable Struct[3]]                  │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_log_time ┆ index_name: message_publish_time ┆ archetype: com.example.Person                            │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true              ┆ is_sorted: true                  ┆ component: com.example.Person:message                    │ │
│ │ is_sorted: true                               ┆ kind: index                  ┆ kind: index                      ┆ kind: data                                               │ │
│ │ kind: control                                 ┆                              ┆                                  ┆                                                          │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════════╪══════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000042S               ┆ PT0.000000042S                   ┆ [{name: Alice, id: 123, status: {name: ACTIVE, value:    │ │
│ │                                               ┆                              ┆                                  ┆ 1}}]                                                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000043S               ┆ PT0.000000043S                   ┆ [{name: Bob, id: 0, status: {name: UNKNOWN, value: 0}}]  │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000044S               ┆ PT0.000000044S                   ┆ [{name: , id: 456, status: {name: UNKNOWN, value: 0}}]   │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000045S               ┆ PT0.000000045S                   ┆ [{name: , id: 0, status: {name: INACTIVE, value: 2}}]    │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000046S               ┆ PT0.000000046S                   ┆ [{name: , id: 0, status: {name: UNKNOWN, value: 0}}]     │ │
│ └───────────────────────────────────────────────┴──────────────────────────────┴──────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
