crates/store/re_mcap/src/layers/snapshots/re_mcap__layers__protobuf__integration_tests__oneof_nested.snap
---
source: crates/store/re_mcap/src/layers/protobuf.rs
expression: "format!(\"{:-240}\", &chunks[0])"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                      │
│ * entity_path: /scene_topic                                                                                                                                                    │
│ * id: [**REDACTED**]                                                                                                                                                           │
│ * version: [**REDACTED**]                                                                                                                                                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────────┬──────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_log_time             ┆ message_publish_time             ┆ com.example.Scene:message                                │ │
│ │ ---                                           ┆ ---                          ┆ ---                              ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Duration(ns)           ┆ type: Duration(ns)               ┆ type: List(Struct("object": Struct("object": Utf8,       │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_log_time ┆ index_name: message_publish_time ┆ "gamma": Float32)))                                      │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true              ┆ is_sorted: true                  ┆ archetype: com.example.Scene                             │ │
│ │ is_sorted: true                               ┆ kind: index                  ┆ kind: index                      ┆ component: com.example.Scene:message                     │ │
│ │ kind: control                                 ┆                              ┆                                  ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════════╪══════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000001S               ┆ PT0.000000001S                   ┆ [{object: {object: cube, gamma: null}}]                  │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ PT0.000000002S               ┆ PT0.000000002S                   ┆ [{object: {object: pyramid, gamma: null}}]               │ │
│ └───────────────────────────────────────────────┴──────────────────────────────┴──────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
